# DMXControl

./: .gitignore  README.md  __init__.py  package.json  pyproject.toml  requirements.txt  run.bat  run.py
core/: DMXControl.py  main.py
data/: default_settings.py  strings.py
utils/: exceptions.py  interface.py  logger.py  settings.py  settingshandler.py  threadhandler.py  userinterface.py
utils/effects/: screencap.py
